--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -11,6 +11,10 @@ body {
 i {
   margin-right: 10px;
 }
+.navbar{
+  font-weight: 800 !important;
+ 
+}
 .navbar-logo {
   padding: 15px;
   color: #fff;
@@ -18,7 +22,7 @@ i {
 }
 
 .navbar-mainbg {
-  background-color: #000000;
+  background-color: #9270af00;
   padding: 0px;
 }
 #navbarSupportedContent {
@@ -37,9 +41,9 @@ i {
   float: left;
 }
 #navbarSupportedContent ul li a {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgb(255, 255, 255);
   text-decoration: none;
-  font-size: 15px;
+  font-size: 18px;
   display: block;
   padding: 20px 20px;
   transition-duration: 0.6s;
@@ -50,6 +54,7 @@ i {
   color: #000000;
   background-color: transparent;
   transition: all 0.7s;
+  font-weight: 800;
 }
 #navbarSupportedContent a:not(:only-child):after {
   content: '\f105';
@@ -79,18 +84,23 @@ i {
   background-color: #fff;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  height: 45px !important;
   margin-top: 10px;
+  
+
 }
 .hori-selector .right,
 .hori-selector .left {
   position: absolute;
-  width: 25px;
+  /* width: 25px; */
   height: 25px;
   background-color: #fff;
   bottom: 10px;
 }
 .hori-selector .right {
-  right: -25px;
+  right: -15px;
 }
 .hori-selector .left {
   left: -25px;
@@ -102,7 +112,7 @@ i {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #000000;
+  background-color: #00000000;
 }
 .hori-selector .right:before {
   bottom: 0;
@@ -122,6 +132,7 @@ i {
     border-radius: 0;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
+    
   }
   .hori-selector .left,
   .hori-selector .right {
